--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,9 @@ RewriteEngine on
 RewriteCond %{REQUEST_URI} 404$
 RewriteRule 404 app/views/template/error_pages/404.php [L,QSA]
 
+RewriteCond %{REQUEST_URI} 403$
+RewriteRule 403 app/views/template/error_pages/404.php [L,QSA]
+
 #page admin/controller/*** ---> pour les pages liees a l'admin juste de ce site
 RewriteCond %{REQUEST_URI} administrator/controller/(.*)
 RewriteRule administrator/([a-zA-Z0-9\-\_\/]*) admin.php?page=$1 [L,QSA]
