--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 bdd_backup/*
 temp/*
 cache/*
-.sass-cache/*
+.sass-cache*
+**/.sass-cache/*
+.sass-cache/
 *.scssc
 modules/*
 !modules/creer-module.md
