--- a/config/config.ini
+++ b/config/config.ini
@@ -1,8 +1,4 @@
-; if installation is set to 1, it launch the page to configure databbase acces
-; and if we put website in prod or dev
 installation = 0
-
-; if developpment is set to 1 the system will use dev variable
 developpment = 1
 
 [dev]
@@ -20,5 +16,5 @@ prod[DB_NAME] = ribs
 prod[DB_USER] = root
 prod[DB_PASS] = ""
 prod[DB_HOST] = 127.0.0.1
-dev[IMGROOT] = /app/images/
-dev[ROOTCKFINDER] = /app/images/pages
+prod[IMGROOT] = /app/images/
+prod[ROOTCKFINDER] = /app/images/pages
