administration of config.ini

--- a/config/config.ini
+++ b/config/config.ini
@@ -5,16 +5,16 @@ developpment = 1
 dev[DB_TYPE] = mysql
 dev[DB_NAME] = ribs
 dev[DB_USER] = root
-dev[DB_PASS] = ""
+dev[DB_PASS] = 
 dev[DB_HOST] = 127.0.0.1
 dev[IMGROOT] = /plugins/ribs-framework/app/images/
 dev[ROOTCKFINDER] = ribs-framework/app/images/pages
 
 [prod]
-prod[DB_TYPE] = mysql
-prod[DB_NAME] = ribs
-prod[DB_USER] = root
-prod[DB_PASS] = ""
-prod[DB_HOST] = 127.0.0.1
+prod[DB_TYPE] = mysqli
+prod[DB_NAME] = ribsi
+prod[DB_USER] = rooti
+prod[DB_PASS] = i
+prod[DB_HOST] = 127.0.0.1i
 prod[IMGROOT] = /app/images/
 prod[ROOTCKFINDER] = /app/images/pages
