now in configuration you can edit bdd configuration

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,5 @@
 installation = 0
-developpment = 1
+developpment = 0
 
 [dev]
 dev[DB_TYPE] = mysql
@@ -11,10 +11,10 @@ dev[IMGROOT] = /plugins/ribs-framework/app/images/
 dev[ROOTCKFINDER] = ribs-framework/app/images/pages
 
 [prod]
-prod[DB_TYPE] = mysqli
-prod[DB_NAME] = ribsi
-prod[DB_USER] = rooti
-prod[DB_PASS] = i
-prod[DB_HOST] = 127.0.0.1i
+prod[DB_TYPE] = mysql
+prod[DB_NAME] = ribs
+prod[DB_USER] = root
+prod[DB_PASS] = 
+prod[DB_HOST] = 127.0.0.1
 prod[IMGROOT] = /app/images/
 prod[ROOTCKFINDER] = /app/images/pages
