--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
       }
     },
     "require": {
-      "php": ">=5.3.0"
+      "php": ">=5.3.0",
+        "ifsnop/mysqldump-php": "2.1"
     }
 }
