--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
       "php": ">=5.3.0",
         "ifsnop/mysqldump-php": "2.1",
         "intervention/image": "^2.3",
-        "nette/mail": "^2.3"
+        "nette/mail": "^2.3",
+        "egulias/email-validator": "^1.2"
     }
 }
