--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "ifsnop/mysqldump-php": "2.1",
         "intervention/image": "^2.3",
         "nette/mail": "^2.3",
-        "egulias/email-validator": "^1.2"
+        "egulias/email-validator": "^1.2",
+        "spipu/html2pdf": "^4.6"
     }
 }
