--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "autoload": {
       "psr-4": {
         "core\\": "core",
-        "modules\\": "modules"
+        "modules\\": "modules",
+        "installation\\": "installation"
       }
     },
     "require": {
