--- a/config/config.ini
+++ b/config/config.ini
@@ -3,18 +3,18 @@ developpment = 1
 
 [dev]
 dev[DB_TYPE] = mysql
-dev[DB_NAME] = ribs
+dev[DB_NAME] = bouga
 dev[DB_USER] = root
-dev[DB_PASS] =
+dev[DB_PASS] = 
 dev[DB_HOST] = 127.0.0.1
-dev[IMGROOT] = /path-to/ribs-root/app/images/
-dev[ROOTCKFINDER] = /path-to/ribs-root/app/images/pages
+dev[IMGROOT] = /app/images/
+dev[ROOTCKFINDER] = /app/images/pages
 
 [prod]
-prod[DB_TYPE] =
-prod[DB_NAME] =
-prod[DB_USER] =
-prod[DB_PASS] =
-prod[DB_HOST] =
+prod[DB_TYPE] = 
+prod[DB_NAME] = 
+prod[DB_USER] = 
+prod[DB_PASS] = 
+prod[DB_HOST] = 
 prod[IMGROOT] = /app/images/
 prod[ROOTCKFINDER] = /app/images/pages
