--- a/config/config.ini
+++ b/config/config.ini
@@ -1,12 +1,12 @@
-installation = 0
+installation = 1
 developpment = 1
 
 [dev]
-dev[DB_TYPE] = mysql
-dev[DB_NAME] = ribs
-dev[DB_USER] = root
+dev[DB_TYPE] =
+dev[DB_NAME] =
+dev[DB_USER] =
 dev[DB_PASS] =
-dev[DB_HOST] = 127.0.0.1
+dev[DB_HOST] =
 
 [prod]
 prod[DB_TYPE] = 
