edtit config.ini to add SMTP configuration

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,5 @@
 installation = 1
-developpment = 1
+developpment = 0
 
 [dev]
 dev[DB_TYPE] =
@@ -7,6 +7,11 @@ dev[DB_NAME] =
 dev[DB_USER] =
 dev[DB_PASS] =
 dev[DB_HOST] =
+dev[SMTP_HOST] =
+dev[SMTP_USER] =
+dev[SMTP_PASS] =
+dev[SMTP_SECURE] =
+dev[SMTP_PORT] =
 
 [prod]
 prod[DB_TYPE] = 
@@ -14,3 +19,8 @@ prod[DB_NAME] =
 prod[DB_USER] = 
 prod[DB_PASS] =
 prod[DB_HOST] =
+prod[SMTP_HOST] =
+prod[SMTP_USER] =
+prod[SMTP_PASS] =
+prod[SMTP_SECURE] =
+prod[SMTP_PORT] =
