--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-sftp-deploy": "^0.2.5",
     "load-grunt-tasks": "^3.5.2"
   }
 }
