--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-sftp-deploy": "^0.2.5",
     "load-grunt-tasks": "^3.5.2"
+  },
+  "dependencies": {
+    "grunt-sync": "^0.6.2"
   }
 }
