change licence in composer

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "piou-piou/ribs-framework",
     "description": "Ribs framework it offer the possibility to create fully personalisable and administrable pages ! You can also add you awn modules and/or modules added by the community",
-    "license": "CC BY SA",
+    "license": "AGPL",
     "authors": [
         {
             "name": "Anthony Pilloud",
